plugins {
  id 'java'
  id 'application'
  id 'com.github.johnrengelman.shadow' version '8.1.1'
}
 
repositories {
  mavenLocal()
  mavenCentral()
}
 
java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(23)
  }
}
 
tasks.withType(JavaCompile) {
  options.compilerArgs << '-Xlint:unchecked'
  options.compilerArgs << '-Xlint:rawtypes'
  options.release = 23
}
 
dependencies {
  implementation 'org.jline:jline:3.27.1'
 
  testImplementation 'org.junit.jupiter:junit-jupiter:5.11.3'
  testImplementation("org.mockito:mockito-core:5.14.2")
  testImplementation("org.mockito:mockito-junit-jupiter:5.14.2")
}
 
test {
  useJUnitPlatform()
}

application {
    mainClass = 'mal.App'
}

shadowJar {
  manifest {
    attributes 'Main-Class': 'pq.App'
  }
}
